<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="mupdflib_app_name">MuPDF</string>
	<string name="mupdflib_version" translatable="false">1.9a (git build)</string>
	<string name="mupdflib_no_media_warning">Storage media not present</string>
	<string name="mupdflib_no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
	<string name="mupdflib_cancel">Cancel</string>
	<string name="mupdflib_search_backwards">Search backwards</string>
	<string name="mupdflib_search_forwards">Search forwards</string>
	<string name="mupdflib_search_document">Search document</string>
	<string name="mupdflib_picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
	<string name="mupdflib_outline_title">Table of Contents</string>
	<string name="mupdflib_enter_password">Enter password</string>
	<string name="mupdflib_text_not_found">Text not found</string>
	<string name="mupdflib_searching_">Searching&#8230;</string>
	<string name="mupdflib_toggle_links">Highlight and enable links</string>
	<string name="mupdflib_no_further_occurrences_found">No further occurrences found</string>
	<string name="mupdflib_select">Select</string>
	<string name="mupdflib_search">Search</string>
	<string name="mupdflib_copy">Copy</string>
	<string name="mupdflib_strike_out">Strike-out</string>
	<string name="mupdflib_delete">Delete</string>
	<string name="mupdflib_highlight">Highlight</string>
	<string name="mupdflib_underline">Underline</string>
	<string name="mupdflib_edit_annotations">Edit annotations</string>
	<string name="mupdflib_ink">Ink</string>
	<string name="mupdflib_save">Save</string>
	<string name="mupdflib_proof">Proof</string>
	<string name="mupdflib_separation">Separation</string>
	<string name="mupdflib_print">Print</string>
	<string name="mupdflib_dismiss">Dismiss</string>
	<string name="mupdflib_parent_directory">[Up one level]</string>
	<string name="mupdflib_yes">Yes</string>
	<string name="mupdflib_no">No</string>
	<string name="mupdflib_entering_reflow_mode">Entering reflow mode</string>
	<string name="mupdflib_leaving_reflow_mode">Leaving reflow mode</string>
	<string name="mupdflib_print_failed">Print failed</string>
	<string name="mupdflib_select_text">Select text</string>
	<string name="mupdflib_copied_to_clipboard">Copied to clipboard</string>
	<string name="mupdflib_no_text_selected">No text selected</string>
	<string name="mupdflib_draw_annotation">Draw annotation</string>
	<string name="mupdflib_nothing_to_save">Nothing to save</string>
	<string name="mupdflib_document_has_changes_save_them_">Document has changes. Save them?</string>
	<string name="mupdflib_cannot_open_document">Cannot open document</string>
	<string name="mupdflib_cannot_open_document_Reason">Cannot open document: %1$s</string>
	<string name="mupdflib_cannot_open_file_Path">Cannot open file: %1$s</string>
	<string name="mupdflib_cannot_open_buffer">Cannot open buffer</string>
	<string name="mupdflib_fill_out_text_field">Fill out text field</string>
	<string name="mupdflib_okay">Okay</string>
	<string name="mupdflib_choose_value">Choose value</string>
	<string name="mupdflib_not_supported">Not supported</string>
	<string name="mupdflib_copy_text_to_the_clipboard">Copy text to the clipboard</string>
	<string name="mupdflib_more">More</string>
	<string name="mupdflib_accept">Accept</string>
	<string name="mupdflib_copy_text">copy text</string>
	<string name="mupdflib_format_currently_not_supported">Format currently not supported</string>
	<string name="mupdflib_toggle_reflow_mode">Toggle reflow mode</string>
</resources>
