<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewAnimator
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <RelativeLayout
            android:id="@+id/topBar0Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="Separations"
                android:onClick="OnSepsButtonClick"
                android:src="@drawable/ic_back"
                android:visibility="visible" />

            <TextView
                android:id="@+id/docNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/linkButton"
                android:layout_toRightOf="@+id/backButton"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/sepsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="Separations"
                android:onClick="OnSepsButtonClick"
                android:src="@drawable/ic_sep"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/reflowButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_toggle_links"
                android:src="@drawable/ic_pdf_links" />

            <ImageButton
                android:id="@+id/reflowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_toggle_reflow_mode"
                android:src="@drawable/ic_reflow"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_outline_title"
                android:src="@drawable/ic_bookmarks" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/moreButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_search_document"
                android:src="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_more"
                android:onClick="OnMoreButtonClick"
                android:src="@drawable/ic_edit" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar1Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <ImageButton
                android:id="@+id/cancelSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_cancel"
                android:onClick="OnCancelSearchButtonClick"
                android:src="@drawable/ic_close" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchBack"
                android:layout_toRightOf="@+id/cancelSearch"
                android:background="@drawable/search"
                android:hint="@string/mupdflib_search"
                android:inputType="text"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/searchBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchForward"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_search_backwards"
                android:src="@drawable/ic_left_arrow" />

            <ImageButton
                android:id="@+id/searchForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_search_forwards"
                android:src="@drawable/ic_right_arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar2Annot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar3Delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

            <ImageButton
                android:id="@+id/cancelDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_cancel"
                android:onClick="OnCancelDeleteButtonClick"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/deleteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/deleteButton"
                android:layout_toRightOf="@+id/cancelDeleteButton"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/mupdflib_delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_delete"
                android:onClick="OnDeleteButtonClick"
                android:src="@drawable/ic_delete" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar4More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <ImageButton
                android:id="@+id/cancelAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_cancel"
                android:onClick="OnCancelMoreButtonClick"
                android:src="@drawable/ic_close" />

            <ImageButton
                android:id="@+id/proofButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/printButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_proof"
                android:onClick="OnProofButtonClick"

                android:src="@drawable/ic_proof"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/printButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_print"
                android:onClick="OnPrintButtonClick"
                android:src="@drawable/ic_print"
                android:visibility="gone" />


            <ImageButton
                android:id="@+id/copyTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/highlightButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_copy_text_to_the_clipboard"
                android:onClick="OnCopyTextButtonClick"
                android:src="@drawable/ic_copy" />

            <ImageButton
                android:id="@+id/highlightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/underlineButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_highlight"
                android:onClick="OnHighlightButtonClick"
                android:src="@drawable/ic_hight_light" />

            <ImageButton
                android:id="@+id/underlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/strikeOutButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_underline"
                android:onClick="OnUnderlineButtonClick"
                android:src="@drawable/ic_text_underline"
                android:tooltipText="Text Underline" />

            <ImageButton
                android:id="@+id/strikeOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/inkButton"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_strike_out"
                android:onClick="OnStrikeOutButtonClick"
                android:src="@drawable/ic_text_strike_through" />

            <ImageButton
                android:id="@+id/inkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_ink"
                android:onClick="OnInkButtonClick"
                android:src="@drawable/ic_edit" />


            <ImageButton
                android:id="@+id/editAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_edit_annotations"
                android:onClick="OnEditAnnotButtonClick"
                android:src="@drawable/ic_annotation"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar5Accept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

            <ImageButton
                android:id="@+id/cancelAcceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_cancel"
                android:onClick="OnCancelAcceptButtonClick"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/annotType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/acceptButton"
                android:layout_toRightOf="@+id/cancelAcceptButton"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/mupdflib_accept"
                android:onClick="OnAcceptButtonClick"
                android:src="@drawable/ic_check_" />
        </RelativeLayout>

    </ViewAnimator>

    <RelativeLayout
        android:id="@+id/lowerButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <SeekBar
            android:id="@+id/pageSlider"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorPrimary"
            android:progressDrawable="@drawable/seek_progress"
            android:thumb="@drawable/seek_thumb" />

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pageSlider"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/page_num"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pageSlider"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/page_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

</RelativeLayout>
